--- a/templates/layouts/header.html
+++ b/templates/layouts/header.html
@@ -1,19 +1,19 @@
 <nav class="navbar navbar-expand-md p-3 border-bottom shadow">
     <div class="container-fluid">
-        <a class="navbar-brand fs-4" href="/"><img src="{{url_for('static', filename='eazycart-logo.svg')}}" alt="eazycart logo" class="img-fluid me-2" width="30" height="26">Eazycart</a>
+        <a class="navbar-brand fs-4" href="/"><img src="{{url_for('static', filename='eazycart-logo.svg')}}" alt="kfc logo" class="img-fluid me-2" width="30" height="26">HFC</a>
         <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="navbar-collapse collapse" id="navbar">
             <ul class="navbar-nav fs-5 mb-md-0 ms-auto">
-                {% for item in ['Cart', 'Orders', 'Wishlist'] %}
+                {% for item in ['Cart', 'Orders'] %}
                 <li class="nav-item">
                     <a class="nav-link{% if page_name == item %} active{% endif %}" href="/{{ item|lower }}"><i
-                class="bi {% if item == 'Cart' %}bi-cart-plus{% elif item == 'Orders' %}bi-bag{% elif item == 'Wishlist' %}bi-list-task{% endif %} me-1"></i>{{ item }}</a>
+                class="bi {% if item == 'Cart' %}bi-cart-plus{% elif item == 'Orders' %}bi-bag{% endif %} me-1"></i>{{ item }}</a>
                 </li>
                 {% endfor %}
-                <li><a class="nav-link" href="/logout"><i class="bi bi-box-arrow-left me-2"></i>Log out</a></li>
+                <li><a class="nav-link" href="/logout"><i class="bi bi-box-arrow-left me-2"></i>Logout</a></li>
             </ul>
         </div>
     </div>
