--- a/templates/category.html
+++ b/templates/category.html
@@ -6,6 +6,33 @@
     <div class="mb-4">
         <p class="lead text-muted">List of items for {{name|lower}}.</p>
     </div>
-    {{name}}
+    <h3 class="fw-normal fs-3">{{name}} Menu</h3>
+    <hr class="mb-4">
+    <div class="row gx-3 gx-lg-4 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+        <div class="col mb-3">
+            <div class="card border shadow">
+                <img class="img-fluid h-50 rounded" src="{{ url_for('static', filename='products/' + name|lower + '/poori.jpg') }}" alt="none">
+                <div class="card-body px-4">
+                    <div class="text-center">
+                        <h5 class="fw-bold">Poori</h5>
+                        <p class="fw-semibold">Price: ₹30</p>
+                    </div>
+                    <p class="text-start mt-2">Category: <label class="fw-semibold">{{name}}</label></p>
+                    <div class="d-flex">
+                        <a role="button" class="btn btn-outline-secondary btn-add-cart w-100" data-id="123">
+                            <i class="bi bi-cart-plus me-2"></i>Add to cart</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 mt-5 border-top">
+        <div class="col-md-4 d-flex align-items-center">
+            <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+                <img src="{{ url_for('static', filename='eazycart-logo.svg') }}" width="30" height="24">
+            </a>
+            <span class="mb-3 mb-md-0 text-body-secondary">© 2023 HFC, Inc</span>
+        </div>
+    </footer>
 </div>
 {% endblock %}
