--- a/templates/category.html
+++ b/templates/category.html
@@ -9,13 +9,15 @@
     <h3 class="fw-normal fs-3">{{name}} Menu</h3>
     <hr class="mb-4">
     <div class="row gx-3 gx-lg-4 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+        {% for item in items %}
         <div class="col mb-3">
             <div class="card border shadow">
                 <img class="img-fluid h-50 rounded" src="{{ url_for('static', filename='products/' + name|lower + '/poori.jpg') }}" alt="none">
                 <div class="card-body px-4">
                     <div class="text-center">
-                        <h5 class="fw-bold">Poori</h5>
-                        <p class="fw-semibold">Price: ₹30</p>
+                        <h5 class="fw-bold">{{item[0]}}</h5>
+                        <p class="fw-semibold">Price: ₹{{item[1]}}</p>
+                        <label class="text-start">{{item[2]}}</label>
                     </div>
                     <p class="text-start mt-2">Category: <label class="fw-semibold">{{name}}</label></p>
                     <div class="d-flex">
@@ -25,6 +27,7 @@
                 </div>
             </div>
         </div>
+        {% endfor %}
     </div>
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 mt-5 border-top">
         <div class="col-md-4 d-flex align-items-center">
