--- a/templates/category.html
+++ b/templates/category.html
@@ -11,8 +11,8 @@
     <div class="row gx-3 gx-lg-4 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
         {% for item in items %}
         <div class="col mb-3">
-            <div class="card border shadow">
-                <img class="img-fluid h-50 rounded" src="{{ url_for('static', filename='products/' + name|lower + '/poori.jpg') }}" alt="none">
+            <div class="card h-100 border shadow">
+                <img class="img-fluid h-50 rounded" src="{{ url_for('static', filename='products/' + name|lower + '/' + item[3]) }}" alt="{{item[3]}}">
                 <div class="card-body px-4">
                     <div class="text-center">
                         <h5 class="fw-bold">{{item[0]}}</h5>
