--- a/templates/layouts/header.html
+++ b/templates/layouts/header.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-md p-3 border-bottom shadow">
-    <div class="container-fluid">
+<nav class="navbar navbar-expand-md">
+    <div class="container bg-body-tertiary p-3 rounded-4">
         <a class="navbar-brand fs-4" href="/"><img src="{{url_for('static', filename='eazycart-logo.svg')}}" alt="kfc logo" class="img-fluid me-2" width="30" height="26">HFC</a>
         <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -13,7 +13,6 @@
                 class="bi {% if item == 'Cart' %}bi-cart-plus{% elif item == 'Orders' %}bi-bag{% endif %} me-1"></i>{{ item }}</a>
                 </li>
                 {% endfor %}
-                <li><a class="nav-link" href="/logout"><i class="bi bi-box-arrow-left me-2"></i>Logout</a></li>
             </ul>
         </div>
     </div>
