--- a/templates/category.html
+++ b/templates/category.html
@@ -19,11 +19,11 @@
                         <p class="fw-semibold">Price: ₹{{item[1]}}</p>
                         <label class="text-start">{{item[2]}}</label>
                     </div>
+                </div>
+                <div class="card-footer border-0 bg-transparent px-3 pb-4">
                     <p class="text-start mt-2">Category: <label class="fw-semibold">{{name}}</label></p>
-                    <div class="d-flex">
-                        <a role="button" class="btn btn-outline-secondary btn-add-cart w-100" data-id="123">
-                            <i class="bi bi-cart-plus me-2"></i>Add to cart</a>
-                    </div>
+                    <a role="button" class="btn btn-outline-secondary btn-add-cart w-100" data-id="123">
+                        <i class="bi bi-cart-plus me-2"></i>Add to cart</a>
                 </div>
             </div>
         </div>
