feat: add/remove item from cart

--- a/templates/cart.html
+++ b/templates/cart.html
@@ -53,7 +53,7 @@
                                         </div>
                                     </div>
                                     <div class="d-none d-md-block text-center col-2">
-                                        <a role="button" class="remove-from-cart text-muted btn" data-name="{{item.name}}"><i class="bi bi-x"></i>
+                                        <a role="button" class="remove-from-cart text-muted btn" data-pname="{{item.name}}" data-price="{{item.price}}" data-desc="{{item.description}}" data-pimg="{{item.img}}" data-pcat="{{item.category}}"><i class="bi bi-x"></i>
                                         </a>
                                     </div>
                                 </div>
