--- a/templates/category.html
+++ b/templates/category.html
@@ -22,8 +22,16 @@
                 </div>
                 <div class="card-footer border-0 bg-transparent px-3 pb-4">
                     <p class="text-start mt-2">Category: <label class="fw-semibold">{{name}}</label></p>
+                    {% if item[0] in names %}
+                    <a role="button" class="btn btn-secondary btn-add-cart w-100" data-pname="{{item[0]}}" data-price="{{item[1]}}" data-desc="{{item[2]}}" data-pimg="{{item[3]}}" data-pcat="{{item[5]}}">
+                        <i class="bi bi-check2 me-2"></i>Added to cart
+                    </a>
+                    {% else %}
                     <a role="button" class="btn btn-outline-secondary btn-add-cart w-100" data-pname="{{item[0]}}" data-price="{{item[1]}}" data-desc="{{item[2]}}" data-pimg="{{item[3]}}" data-pcat="{{item[5]}}">
-                        <i class="bi bi-cart-plus me-2"></i>Add to cart</a>
+                        <i class="bi bi-cart-plus me-2"></i>Add to cart
+                    </a>
+                    {% endif %}
+
                 </div>
             </div>
         </div>
