change: display total summary

--- a/templates/cart.html
+++ b/templates/cart.html
@@ -48,7 +48,7 @@
                                         <div class="row">
                                             <div class="d-md-none text-muted col-6">Total price</div>
                                             <div class="text-end text-md-center col-md-12 col-6">₹
-                                                <label class="total-item-price">{{item.price}}</label>
+                                                <label class="total-item-price">{{item.price * qty}}</label>
                                             </div>
                                         </div>
                                     </div>
