--- a/templates/orders.html
+++ b/templates/orders.html
@@ -2,7 +2,7 @@
 
 <div class="container my-5">
     <label class="fs-5 mb-3"><a href="/" class="text-decoration-none text-body-tertiary">Home</a> - <a href="/orders" class="text-decoration-none text-body">Orders</a></label>
-    <h4 class="fw-semibold display-6">Your Orders</h4>
+    <h4 class="fw-semibold display-6">My Order</h4>
     {% if orders|length > 0 %}
     <table class="table table-hover">
         <thead>
