--- a/templates/bill.html
+++ b/templates/bill.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %} {% block body %}
 
 <div class="container my-5">
-    <label class="fs-5 mb-3"><a href="/" class="text-decoration-none text-body-tertiary">Home</a> - <a href="/orders" class="text-decoration-none text-body">Orders</a></label>
-    <h4 class="fw-semibold display-6">My Order</h4>
+    <label class="fs-5 mb-3"><a href="/" class="text-decoration-none text-body-tertiary">Home</a> - <a href="/orders" class="text-decoration-none text-body">Bill</a></label>
+    <h4 class="fw-semibold display-6">My Bill</h4>
     {% if orders|length > 0 %}
     <table class="table table-hover">
         <thead>
