--- a/templates/bill.html
+++ b/templates/bill.html
@@ -28,17 +28,18 @@
                                     <div class="col-xl-9 col-lg-9 col-md-12 col-sm-12 col-12">
                                         <div class="invoice-details">
                                             <address>
-											Alex Maxwell<br>
-											8974327949<br>
-                                            test@mail.com
+											{{user[0]}}<br>
+											{{user[1]}}<br>
+                                            {{user[2]}}
                                             </address>
                                         </div>
                                     </div>
                                     <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12 text-md-end">
                                         <div class="invoice-details">
                                             <div class="invoice-num">
-                                                <div>Invoice - #009</div>
-                                                <div>January 10th 2020</div>
+                                                <div>Invoice - #{{token}}</div>
+                                                <div>{{order_dt[0]}}</div>
+                                                <div>{{order_dt[1]}}</div>
                                             </div>
                                         </div>
                                     </div>
@@ -51,58 +52,38 @@
                                             <table class="table mb-4 m-0">
                                                 <thead>
                                                     <tr>
-                                                        <th>Items</th>
-                                                        <th>Quantity</th>
-                                                        <th>Sub Total</th>
+                                                        <th scope="col">Items</th>
+                                                        <th scope="col">Price</th>
+                                                        <th scope="col">Quantity</th>
+                                                        <th scope="col">Sub Total</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
-                                                    <tr colspan="2">
+                                                    {% for item, qty in items.items() %}
+                                                    <tr>
                                                         <td>
-                                                            Wordpress Template
-                                                            <p class="m-0 text-muted">
-                                                                Reference site about Lorem Ipsum, giving information on its origins.
-                                                            </p>
+                                                            {{item.name}}
                                                         </td>
-                                                        <td>9</td>
-                                                        <td>₹5000.00</td>
+                                                        <td>₹{{item.price}}</td>
+                                                        <td>{{qty}}</td>
+                                                        <td>₹{{item.price|int * qty}}</td>
                                                     </tr>
-                                                    <tr colspan="2">
-                                                        <td>
-                                                            Maxwell Admin Template
-                                                            <p class="m-0 text-muted">
-                                                                As well as a random Lipsum generator.
-                                                            </p>
-                                                        </td>
-                                                        <td>5</td>
-                                                        <td>₹100.00</td>
-                                                    </tr>
-                                                    <tr colspan="2">
-                                                        <td>
-                                                            Unify Admin Template
-                                                            <p class="m-0 text-muted">
-                                                                Lorem ipsum has become the industry standard.
-                                                            </p>
-                                                        </td>
-                                                        <td>6</td>
-                                                        <td>₹49.99</td>
-                                                    </tr>
-                                                    <tr colspan="2">
-                                                        <td>&nbsp;</td>
+                                                    {% endfor %}
+                                                    <tr>
+                                                        <td colspan="2">&nbsp;</td>
                                                         <td>
                                                             <p>
-                                                                Subtotal<br> Shipping<br> Tax
+                                                                Subtotal<br> GST
                                                                 <br>
                                                             </p>
                                                             <h5 class="text-success"><strong>Grand Total</strong></h5>
                                                         </td>
                                                         <td>
                                                             <p>
-                                                                ₹5000.00<br> ₹10.00
-                                                                <br> ₹00.00
+                                                                ₹{{total}}<br> ₹10.00
                                                                 <br>
                                                             </p>
-                                                            <h5 class="text-success"><strong>₹5150.99</strong></h5>
+                                                            <h5 class="text-success"><strong>₹{{total + 10}}</strong></h5>
                                                         </td>
                                                     </tr>
                                                 </tbody>
