--- a/templates/bill.html
+++ b/templates/bill.html
@@ -36,10 +36,15 @@
                                     </div>
                                     <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12 text-md-end">
                                         <div class="invoice-details">
-                                            <div class="invoice-num">
+                                            <div class="mb-3">
                                                 <div>Invoice - #{{token}}</div>
                                                 <div>{{order_dt[0]}}</div>
                                                 <div>{{order_dt[1]}}</div>
+                                            </div>
+                                            <div class="invoice-details">
+                                                <div>Order: {{order_dt[2]|capitalize}}</div>
+                                                <div>Status: {{order_dt[3]}}</div>
+                                                <div>Payment: {{user[3]|capitalize}}</div>
                                             </div>
                                         </div>
                                     </div>
