--- a/templates/bill.html
+++ b/templates/bill.html
@@ -98,7 +98,7 @@
                                 </div>
                             </div>
                             <div class="p-3">
-                                <button class="btn btn-primary btn-finish-takeaway">Finish</button>
+                                <button class="btn btn-primary btn-empty-cart" data-token="{{token}}">Finish</button>
                             </div>
                         </div>
                     </div>
