--- a/templates/layouts/header.html
+++ b/templates/layouts/header.html
@@ -7,12 +7,19 @@
 
         <div class="navbar-collapse collapse" id="navbar">
             <ul class="navbar-nav fs-5 mb-md-0 ms-auto">
+                {% if admin == True %}
+                <li class="nav-item mx-2">
+                    <a class="nav-link" href="/">
+                        <i class="bi bi-box-arrow-left me-1"></i>Go to home</a>
+                </li>
+                {% else %}
                 {% for item in ['Cart', 'About'] %}
                 <li class="nav-item mx-2">
                     <a class="nav-link{% if page_name == item %} active{% endif %}" href="/{{ item|lower }}">
                         <i class="bi {% if item == 'Cart' %}bi-cart-plus{% elif item == 'About' %}bi-info-circle{% endif %} me-1"></i>{{ item }}</a>
                 </li>
                 {% endfor %}
+                {% endif %}
             </ul>
         </div>
     </div>
