--- a/templates/layouts/header.html
+++ b/templates/layouts/header.html
@@ -10,7 +10,11 @@
                 {% if admin == True %}
                 <li class="nav-item mx-2">
                     <a class="nav-link" href="/">
-                        <i class="bi bi-box-arrow-left me-1"></i>Go to home</a>
+                        <i class="bi bi-house me-1"></i>Home</a>
+                </li>
+                <li class="nav-item mx-2">
+                    <a class="nav-link active" href="/admin">
+                        <i class="bi bi-person-circle me-1"></i>Admin</a>
                 </li>
                 {% else %}
                 {% for item in ['Cart', 'About'] %}
