--- a/templates/admin.html
+++ b/templates/admin.html
@@ -14,7 +14,7 @@
         <hr class="mb-4">
     </div>
     <div class="row justify-content-center px-4">
-        {% for i in ['Add Item', 'Remove Item', 'Update Item', 'Show Orders'] %}
+        {% for i in ['Add Item', 'Remove Item', 'Show Orders'] %}
         <div class="col-lg-6 mb-3">
             <div class="card btn bg-body-tertiary h-100 border shadow">
                 <div class="card-body px-4">
