--- a/templates/item_remove.html
+++ b/templates/item_remove.html
@@ -1,29 +1,46 @@
 {% extends 'base.html' %} {% block body %}
-<div class="container my-5">
-    <div class="p-3">
-        <h3 class="fw-normal fs-4">Remove Item</h3>
-        <hr class="mb-4">
+<div class="container my-5 p-3">
+    <div>
+        <h3 class="fw-normal fs-4"><i class="bi bi-trash me-2"></i>Remove Item</h3>
+        <hr>
+        <p class="mb-4">Remove item from menu with specific categories</p>
     </div>
-    <div class="row justify-content-center px-4">
-        {% for i in ['Add Item', 'Remove Item', 'Update Item', 'Show Orders'] %}
-        <div class="col-lg-6 mb-3">
-            <div class="card btn bg-body-tertiary h-100 border shadow">
-                <div class="card-body px-4">
-                    <div class="text-center">
-                        <h5 class="fw-normal">
-                            <i class="bi {% if i == 'Add Item' %} bi-plus-circle {% elif i == 'Remove Item' %} bi-dash-circle {% elif i == 'Update Item' %} bi-arrow-repeat {% elif i == 'Show Orders' %} bi-list-task {% endif %}"></i>
-                            {{i}}
-                        </h5>
-                    </div>
-                    {% set word = i.split(' ')[0] %}
-                    {% if i == 'Show Orders' %}
-                    <a href="/admin/orders/{{word|lower}}" class="stretched-link"></a>
-                    {% else %}
-                    <a href="/admin/items/{{word|lower}}" class="stretched-link"></a>
-                    {% endif %}
+    <div>
+        {% for ct in ['Breakfast', 'Lunch', 'Snacks', 'Dinner', 'Drinks', 'Desserts'] %}
+        <h3 class="fw-normal fs-4">Category - {{ct}}</h3>
+        <hr class="mb-3">
+        <ul class="list-group list-group-flush">
+            {% for i, j in items.items() %}
+            {% if i|capitalize == ct %}
+            <li class="list-group-item">
+                <div class="table-responsive">
+                    <table class="table mb-4 m-0">
+                        <thead>
+                            <tr>
+                                <th colspan="2" scope="col">Items</th>
+                                <th colspan="2" scope="col">Price</th>
+                                <th colspan="2" scope="col">Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for item in j %}
+                            <tr>
+                                <td colspan="2">
+                                    <label>{{item[0]}}</label>
+                                </td>
+                                <td colspan="2">₹{{item[1]}}</td>
+                                <td colspan="2">
+                                    <button class="btn btn-sm btn-danger"><i class="bi bi-trash"></i></button>
+                                </td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
                 </div>
-            </div>
-        </div>
+            </li>
+            {% endif %}
+            {% endfor %}
+        </ul>
         {% endfor %}
     </div>
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 mt-5 border-top">
@@ -31,7 +48,7 @@
             <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
                 <img src="{{ url_for('static', filename='eazycart-logo.svg') }}" width="30" height="24">
             </a>
-            <span class="mb-3 mb-md-0 text-body-secondary">© 2023 HFC   , Inc</span>
+            <span class="mb-3 mb-md-0 text-body-secondary">© 2023 HFC , Inc</span>
         </div>
     </footer>
 </div>
