change: order summary UI updated

--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -73,12 +73,8 @@
                                 </td>
                             </tr>
                             <tr>
-                                <th class="py-4">Shipping and handling</th>
-                                <td class="py-4 text-end text-muted">₹<label class="cart-shipping-cost">10.00</label></td>
-                            </tr>
-                            <tr>
-                                <th class="py-4">Tax</th>
-                                <td class="py-4 text-end text-muted">₹0.00</td>
+                                <th class="py-4">GST</th>
+                                <td class="py-4 text-end text-muted">₹10.00</td>
                             </tr>
                             <tr>
                                 <th class="pt-4 border-0">Total</th>
