--- a/templates/show_orders.html
+++ b/templates/show_orders.html
@@ -7,10 +7,13 @@
     <table class="table table-hover">
         <thead>
             <tr class="text-center">
-                <th scope="col">Order #</th>
-                <th scope="col">Date</th>
-                <th scope="col">Total</th>
-                <th scope="col">Status</th>
+                <th scope="col">Token #</th>
+                <th scope="col">Item name</th>
+                <th scope="col">Qty</th>
+                <th scope="col">Customer</th>
+                <th scope="col">Priority</th>
+                <th scope="col">Time</th>
+                <!-- Delivered tick -->
                 <th scope="col">Action</th>
             </tr>
         </thead>
