--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,8 @@
     </div>
     <h3 class="fw-normal fs-3">Categories</h3>
     <hr class="mb-4">
-    <div class="row justify-content-center px-5">
-        {% for i in ['Breakfast', 'Lunch', 'Snacks', 'Dinner', 'Desserts', 'Drinks'] %}
+    <div class="row justify-content-center px-5 mb-3">
+        {% for i in ['Breakfast', 'Lunch', 'Snacks', 'Dinner'] %}
         <div class="col-lg-6 mb-3">
             <div class="card custom-card bg-body-tertiary h-100 border shadow">
                 <div class="card-body px-4">
@@ -26,6 +26,9 @@
         </div>
         {% endfor %}
     </div>
+    <h3 class="fw-normal fs-3">Menu of the day</h3>
+    <hr class="mb-4">
+    <div></div>
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 mt-5 border-top">
         <div class="col-md-4 d-flex align-items-center">
             <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
