hover effect added to remove menu item page

--- a/templates/item_remove.html
+++ b/templates/item_remove.html
@@ -14,7 +14,7 @@
             {% if i|capitalize == ct %}
             <li class="list-group-item">
                 <div class="table-responsive">
-                    <table class="table mb-4 m-0">
+                    <table class="table table-hover mb-4 m-0">
                         <thead>
                             <tr>
                                 <th colspan="2" scope="col">Items</th>
